Use the new BuildRenderTree charts.

--- a/Blazor-Dashboard/Pages/Index.cshtml
+++ b/Blazor-Dashboard/Pages/Index.cshtml
@@ -1,15 +1,6 @@
-﻿@addTagHelper *, PieChartComponent
-@addTagHelper *, DoughnutChartComponent
-@addTagHelper *, LineChartComponent
-@addTagHelper *, VerticalBarChartComponent
-@addTagHelper *, HorizontalBarChartComponent
+﻿@addTagHelper *, ChartMan
 
-@using DoughnutChartComponent;
-@using PieChartComponent;
-@using LineChartComponent;
-@using VerticalBarChartComponent;
-@using HorizontalBarChartComponent;
-@using Shapes
+@using ChartMan;
 
 @page "/"
 @page "/dashboard1"
