Fix icon margins and Support Doughnut Chart Parameters

--- a/Blazor-Dashboard/Pages/Index.cshtml
+++ b/Blazor-Dashboard/Pages/Index.cshtml
@@ -62,7 +62,7 @@
             -->
             <div class="card-body">
                 <h5 class="card-title">RenderTreeBuilder</h5>
-                <DoughnutChartMan></DoughnutChartMan>
+                <DoughnutChartMan InputData="50,30,20"></DoughnutChartMan>
                 <!--
                 <p>
                 Width:rectParam.Width
