--- a/Blazor-Dashboard/Shared/MainLayout.cshtml
+++ b/Blazor-Dashboard/Shared/MainLayout.cshtml
@@ -51,7 +51,7 @@
                         <a class="nav-link flag" href="#"><div class="ml-auto"><img src="images/us.png" width="25" height="25" class="rounded-circle"></div></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link user" href="#"><div class="ml-auto"><img src="images/person3.png" width="35" height="35" class="rounded-circle"></div></a>
+                        <a class="nav-link user" href="#"><div class="ml-auto"><img src="images/person3.png" width="35" height="35" class="rounded-circle" style="margin-top:-1px"></div></a>
                     </li>
 
                 </ul>
