--- a/Blazor-Dashboard/Shared/NavMenu.cshtml
+++ b/Blazor-Dashboard/Shared/NavMenu.cshtml
@@ -5,10 +5,18 @@
             <button class="navbar-toggler" onclick=@LaunchSideBar>
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <button class="navbar-toggler" style="padding-top:-0.01px" onclick=@ToggleNavMenu>
-                <span class="oi oi-excerpt" aria-hidden="true" style="font-size:1.10em;width:1.3em;height:1.37em;padding-top:7px;font-weight:200"></span>
+            <button class="navbar-toggler" onclick=@ToggleNavMenu>
+                <span class="oi oi-excerpt" style="padding-right:2px;padding-left:2px;padding-bottom:2px;padding-top:5px;width:30px;height:30px;vertical-align: middle; background: no-repeat center center;background-size: 100% 100%;font-size:22px;font-weight:100"></span>
+            </button>
+            <!--
+            <button class="navbar-toggler" onclick=ToggleNavMenu>
+                <span style="margin-top:-5px;width:30px;height:30px;vertical-align: middle; background: no-repeat center center;background-size: 100% 100%;font-size:30px">A</span>
             </button>
 
+    <button class="navbar-toggler" style="padding-top:-0.01px" onclick=ToggleNavMenu>
+        <span class="oi oi-excerpt" aria-hidden="true" style="font-size:1.10em;width:1.3em;height:1.37em;padding-top:7px;font-weight:200"></span>
+    </button>
+        -->
             <!--
     <button class="navbar-toggler" style="padding-top:2.2px" onclick=ToggleNavMenu>
         <span class="oi oi-excerpt" aria-hidden="true" style="font-size:1.10em;width:1.3em;height:1.45em;padding-top:7px;font-weight:200"></span>
