Support for parameterized Pie Chart

--- a/Blazor-Dashboard/Pages/Index.cshtml
+++ b/Blazor-Dashboard/Pages/Index.cshtml
@@ -50,7 +50,7 @@
             <div class="card-header">Pie Chart</div>
             <div class="card-body">
                 <h5 class="card-title">By Channels</h5>
-                <PieChart></PieChart>
+                <PieChartMan InputData="34,33,33"></PieChartMan>
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
         </div>
