--- a/Blazor-Dashboard/_ViewImports.cshtml
+++ b/Blazor-Dashboard/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using System.Net.Http
-@using Microsoft.AspNetCore.Blazor.Layouts
-@using Microsoft.AspNetCore.Blazor.Routing
+@using Microsoft.AspNetCore.Components.Layouts
+@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
 @using Blazor_Dashboard
 @using Blazor_Dashboard.Shared
