Horizontal Bar Chart

--- a/Blazor-Dashboard/Pages/Index.cshtml
+++ b/Blazor-Dashboard/Pages/Index.cshtml
@@ -88,7 +88,7 @@
             <div class="card-header">Bar Chart Horizontal</div>
             <div class="card-body">
                 <h5 class="card-title">By Gender</h5>
-                <HorizontalBarChart></HorizontalBarChart>
+                <HorizontalBarChartMan InputData="30,70,42,50,3,55,35,22"></HorizontalBarChartMan>
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
         </div>
