Upgrade to Blazor0.9

--- a/Blazor-Dashboard/Pages/Index.cshtml
+++ b/Blazor-Dashboard/Pages/Index.cshtml
@@ -96,7 +96,7 @@
             <div class="card-header">Bar Chart Vertical</div>
             <div class="card-body">
                 <h5 class="card-title">By Gender</h5>
-                <VerticalBarChart></VerticalBarChart>
+                <VerticalBarChartMan InputData="30,70,42,50,3,55,35,22"></VerticalBarChartMan>
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
         </div>
