--- a/Blazor-Dashboardv0.1/wwwroot/css/sidebar.css
+++ b/Blazor-Dashboardv0.1/wwwroot/css/sidebar.css
@@ -73,15 +73,23 @@ body,
 	transform: translate3d(0, 0, 0);
 }
 
-
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
 
     .sidebar-main-container {
         flex-direction: column;
     }
+    /*
+    this will occur after slide in too late
+
+    .sidebar-nav-open .sidebar-cover {
+        z-index: 299;
+    }
+    .sidebar-nav-open .sidebar-nav {
+        z-index: 301;
+    }
+    */
 
 }
-
 
 /*
 
