--- a/Blazor-Dashboard/Pages/Index.razor
+++ b/Blazor-Dashboard/Pages/Index.razor
@@ -46,6 +46,7 @@
                 <SparklineMan InputData="[30,0,6,20,45,48,51,60,76,77,78,79,90,100,30,90,95,100,40,0,0,0],[50,70,6,20,45,8,51,60,6,77,8,79,0,10,100,10,0,50,30,0,0,0],[100,0,16,25,48,45,1,0,6,37,78,79,90,90,91,100,80,0,40,0,0,0],[60,0,16,25,48,45,1,0,6,37,78,79,90,90,91,99,80,0,40,0,0,0]" StartColor="#ce4b99" StopColor="#377bbc" SegmentWidth="20"></SparklineMan>        
                 <LineChartMan InputData="[30,70,42,50,3,55,35,22 ],[40,50,32,70,55,15,15,12],[0,10,10,10,10,20,70,70]"></LineChartMan>
                 -->
+                <LineChart InputData="[30,70,42,50,3,55,35,22 ],[40,50,32,70,55,15,15,12],[0,10,10,10,10,20,70,70]"></LineChart>
 
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
@@ -86,7 +87,11 @@
             <div class="card-header">Bar Chart Horizontal</div>
             <div class="card-body">
                 <h5 class="card-title">By Gender</h5>
-                <HorizontalBarChart InputData="10,30,70,42,50,3,55,35,22,10"></HorizontalBarChart>
+                <HorizontalBarChart 
+                    InputData="10,20,30,40,50,60,70,80,90,100"
+                    InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone,TV">
+                </HorizontalBarChart>
+
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
         </div>
