Vertical Bar Chart update

--- a/Blazor-Dashboard/Pages/Index.razor
+++ b/Blazor-Dashboard/Pages/Index.razor
@@ -67,7 +67,7 @@
             -->
             <div class="card-body">
                 <h5 class="card-title">RenderTreeBuilder</h5>
-                <DonutChart InputData="50,30,20"></DonutChart>
+                <DonutChart InputData="50,30,20" InputLabels="App Store,Website,Partners"></DonutChart>
                 <!--
                 <p>
                 Width:rectParam.Width
@@ -99,9 +99,9 @@
             <div class="card-header">Bar Chart Vertical</div>
             <div class="card-body">
                 <h5 class="card-title">By Gender</h5>
-                <!--
-                <VerticalBarChartMan InputData="30,70,42,50,3,55,35,22"></VerticalBarChartMan>
-                -->
+                
+                <VerticalBarChart InputData="30,70,42,50,3,55,35,22,10,30"></VerticalBarChart>
+                
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
         </div>
