The xyz of Blazor Dashboard

--- a/Blazor-Dashboard/Pages/IndexY.razor
+++ b/Blazor-Dashboard/Pages/IndexY.razor
@@ -1,9 +1,9 @@
 ﻿@using WebAssemblyMan;
 
-@page "/"
-@page "/dashboard1"
+@page "/dashboardY"
 
-<div class="jumbotron" style="background:white;margin-left:16px;margin-right:16px">
+<div class="jumbotron" style="background:white;margin-left:16px;margin-right:16px;border-style: solid;border-width: 1px;border-color:lightgray">
+        
     <div class="container-fluid">
         <h1>Admin Dashboard</h1>
         <p>This is an ultra lightweight admin dashboard based in Blazor. We are experimenting this in our ASP.NET project. The aim is to use Blazor, CSS, CSS Grid and Bootsrap for front end development with the design philosophy of keeping the components modern and lightweight with minimal dependencies. We strongly believe that less dependencies means easier of upgrade. On the other hand, if Blazor or Bootstrap introduces new components that overlap with those in this project, the idea is to let the components in Blazor and Boostrap take precedence. This template is available under the MIT License, so feel free to play with it.</p>
