--- a/Blazor-Dashboard/Shared/MainLayoutZ.razor
+++ b/Blazor-Dashboard/Shared/MainLayoutZ.razor
@@ -1,12 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
+<!--
 <div class="sidebar" style="overflow:auto">
+-->
+<div class="sidebar">
     <!--SideTopBar-->
     <!--
-    <NavMenu  />
+    <NavMenuZ ToggleNavMenuChanged="Redraw" SlideInSideBarTriggered="LaunchSlideInSideBar" />
     -->
-    <NavMenu ToggleNavMenuChanged="Redraw" SlideInSideBarTriggered="LaunchSlideInSideBar" />
-    
+    <NavMenuZ ToggleNavMenuChanged="Redraw" SlideInSideBarTriggered="LaunchSlideInSideBar" />
+
 
 </div>
 <div class="big-main-container" style="width:100%">
