--- a/Blazor-Dashboard/AppY.razor
+++ b/Blazor-Dashboard/AppY.razor
@@ -1,9 +1,9 @@
 ﻿<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayoutZ)" />
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayoutY)" />
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(MainLayoutZ)">
+        <LayoutView Layout="@typeof(MainLayoutY)">
             <p>Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
