--- a/Blazor-Dashboard/Shared/MainLayoutZ.razor
+++ b/Blazor-Dashboard/Shared/MainLayoutZ.razor
@@ -18,8 +18,9 @@
     <div class="big-main-container" style="width:100%" onclick=HideSlideInSideBar>
         <div id="top-bar" class=(BlazorDashboard.XSingleton.NavBarDisplay ? "top-rowx" : "top-rowx-blank")>
 
+        <div id="top-bar" class=@(BlazorDashboard.XSingleton.NavBarDisplay ? "top-rowx" : "top-rowx-blank" )>
         -->
-    <div id="top-bar" class=@(BlazorDashboard.XSingleton.NavBarDisplay ? "top-rowx" : "top-rowx-blank" )>
+    <div id="top-bar" class=@(BlazorDashboard.XSingleton.NavBarDisplay ? "top-rowx display-user-bar" : "top-rowx hide-user-bar" )>
         <nav id="nav-menux" class="navbar navbar-expand navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -69,16 +70,16 @@
 
     </div>
 
-    <div id="sidebar-main-container" class=@navstring style="background:#e9ecef">
+    <div id="slidebar-container" class=@navstring style="background:#e9ecef">
         <!--
-        <div id="sidebar-main-container" class=navstring style="background:#e9ecef">
+        <div id="slidebar-container" class=navstring style="background:#e9ecef">
             style="background:#e9ecef;"
         <div class="slidesidebar">
             <NavMenu SlideIn="true" CollapseSideMenu="false" />
         </div>
             -->
         <!--SlideInSideBar-->
-        <nav id="nav-menu" class="sidebar-nav ind" style="margin-top:-6px">
+        <nav id="nav-menu" class="slidebar-nav ind" style="margin-top:-6px">
             <div class="top-row pl-4 navbar navbar-dark">
                 <a class="navbar-brand" href="">BLAZOR DASHBOARD</a>
             </div>
@@ -100,55 +101,13 @@
                             <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
                         </NavLink>
                     </li>
-                    <!--
-
-                    <li class="nav-item-side px-3">
-                        <NavLink class="nav-link" href="fetchdata">
-                            <span class="oi oi-list-rich" aria-hidden="true"></span> Counter
-                        </NavLink>
-                        <ul style="display:block">
-                            <li style="color:white">
-                                Submenu 1
-                            </li>
-                            <li style="color:white">
-                                Submenu 2
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item-side px-3">
-                        <NavLink class="nav-link" href="fetchdata">
-                            <span class="oi oi-list-rich" aria-hidden="true"></span> Counter
-                        </NavLink>
-                        <ul style="display:block">
-                            <li style="color:white">
-                                Submenu 1
-                            </li>
-                            <li style="color:white">
-                                Submenu 2
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item-side px-3">
-                        <NavLink class="nav-link" href="fetchdata">
-                            <span class="oi oi-list-rich" aria-hidden="true"></span> Counter
-                        </NavLink>
-                        <ul style="display:block">
-                            <li style="color:white">
-                                Submenu 1
-                            </li>
-                            <li style="color:white">
-                                Submenu 2
-                            </li>
-                        </ul>
-                    </li>
-                        -->
 
                 </ul>
             </div>
         </nav>
 
 
-        <div class="main sidebar-cover" @onclick=HideSlideInSideBar>
+        <div class="main slidebar-cover" @onclick=HideSlideInSideBar>
                 <div class="content px-4">
                     @Body
                 </div>
@@ -165,7 +124,7 @@
     //string TitleValue="Hello Title";
 
     bool slideIn=false;
-    string navstring="sidebar-main-container";
+    string navstring="slidebar-container";
     /*
     public async static Task SayHello()
     {
@@ -182,7 +141,7 @@
     {
     //StateHasChanged();
     Console.WriteLine("LaunchSlideInSideBar");
-    navstring="sidebar-main-container sidebar-nav-open";
+    navstring="slidebar-container slidebar-open";
     slideIn=true;
     }
     void HideSlideInSideBar()
@@ -192,7 +151,7 @@
     Console.WriteLine("HideSlideInSideBar");
     if (slideIn)
     {
-    navstring="sidebar-main-container";
+    navstring="slidebar-container";
     slideIn=false;
     }
     }
