--- a/Blazor-Dashboard/Shared/NavMenuZ.razor
+++ b/Blazor-Dashboard/Shared/NavMenuZ.razor
@@ -1,4 +1,36 @@
-﻿<nav class=@(SlideIn ? "sidebar-nav" : "")>
+﻿<nav>
+    <div class="top-row pl-4 navbar navbar-dark">
+        <a class="navbar-brand" href="">BLAZOR DASHBOARD</a>
+        <div>
+            <button class="navbar-toggler" @onclick=LaunchSideBar>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <button class="navbar-toggler" @onclick=ToggleNavMenu>
+                <span class="oi oi-excerpt" style="padding-right:2px;padding-left:2px;padding-bottom:2px;padding-top:5px;width:30px;height:30px;vertical-align: middle; background: no-repeat center center;background-size: 100% 100%;font-size:22px;font-weight:100"></span>
+            </button>
+        </div>
+    </div>
+    <div class="collapse">
+        <ul class="nav flex-column">
+            <li class="nav-item-side px-3">
+                <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </li>
+
+            <li class="nav-item-side px-3">
+                <NavLink class="nav-link" href="counter">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                </NavLink>
+            </li>
+
+        </ul>
+    </div>
+</nav>
+
+<!--
+
+<nav class=@(SlideIn ? "slidebar-nav" : "")>
     <div class="top-row pl-4 navbar navbar-dark">
         <a class="navbar-brand" href="">BLAZOR DASHBOARD</a>
         <div style=@(SlideIn ? "visibility:hidden" : "visibility:visible")>
@@ -23,39 +55,11 @@
                     <span class="oi oi-plus" aria-hidden="true"></span> Counter
                 </NavLink>
             </li>
-            <!--
-            <li class="nav-item-side px-3">
-                <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-                </NavLink>
-            </li>
-            <li class="nav-item-side px-3">
-                <NavLink class="nav-link" href="classrender">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Class Render
-                </NavLink>
-            </li>
-            -->
-            <!--
-
-            <li class="nav-item-side px-3">
-                <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Counter
-                </NavLink>
-                <ul style="display:block">
-                    <li style="color:white">
-                        Submenu 1
-                    </li>
-                    <li style="color:white">
-                        Submenu 2
-                    </li>
-                </ul>
-            </li>
-            -->
 
         </ul>
     </div>
 </nav>
-
+-->
 
 @functions {
     [Parameter]
