--- a/Blazor-Dashboard/wwwroot/css/sidebarz.css
+++ b/Blazor-Dashboard/wwwroot/css/sidebarz.css
@@ -1,7 +1,7 @@
 html,
 body,
-.sidebar-main-container,
-.sidebar-cover
+.slidebar-container,
+.slidebar-cover
 {
 	height: 100%;
 }
@@ -13,7 +13,7 @@ body,
     flex-direction: column;
 }
 
-.sidebar-main-container {
+.slidebar-container {
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -21,7 +21,7 @@ body,
     flex-direction: row;
 }
 
-.sidebar-cover {
+.slidebar-cover {
 	position: relative;
 	left: 0;
 	top:0;
@@ -31,7 +31,7 @@ body,
 	transition: transform 0.5s;
 }
 
-.sidebar-cover::after {
+.slidebar-cover::after {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -43,14 +43,15 @@ body,
 	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
 }
 
-.sidebar-nav-open .sidebar-cover::after{
+.slidebar-open .slidebar-cover::after{
 	width: 100%;
 	height: 100%;
 	opacity: 1;
 	transition: opacity 0.5s;
 }
 
-.sidebar-nav {
+/*comebak to find out*/
+.slidebar-nav {
     position: absolute;
     top: -50px;
     left: 0;
@@ -63,12 +64,13 @@ body,
     transform: translate3d(-100%, 0, 0);
 }
 
+/*to be removed
 .slide-sidebar-nav {
     position: relative;
     top: 0;
 }
-
-.sidebar-nav-open .sidebar-nav {
+*/
+.slidebar-open .slidebar-nav {
 	visibility: visible;
 	transform: translate3d(0, 0, 0);
 }
@@ -76,43 +78,10 @@ body,
 
 @media (max-width: 767.98px) {
 
-    .sidebar-main-container {
+    .slidebar-container {
         flex-direction: column;
     }
 
 }
 
-
-/*
-
-.sidebar-nav {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 100;
-	visibility: hidden;
-	width: 300px;
-	height: 100%;
-	background: #000000;
-	transition: all 0.5s;
-}
-.slide-in.sidebar-nav {
-	visibility: visible;
-	transform: translate3d(-100%, 0, 0);
-}
-.slide-in.sidebar-nav-open .slide-in.sidebar-nav {
-	visibility: visible;
-	transform: translate3d(0, 0, 0);
-}
-.slide-in.sidebar-nav::after {
-	display: none;
-}
-.sidebar-nav {
-	visibility: visible;
-	transform: translate3d(-100%, 0, 0);
-}
-.sidebar-nav::after {
-	display: none;
-}
-*/
 
