--- a/Blazor-Dashboard/Pages/IndexZ.razor
+++ b/Blazor-Dashboard/Pages/IndexZ.razor
@@ -111,12 +111,14 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header">Line Chart</div>
+            <div class="card-header">SparkLine</div>
             <div class="card-body">
-                <h5 class="card-title">By Gender</h5>
+                <h5 class="card-title">Using Fonts</h5>
                 <!--
                 <DonutChart InputData="8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333"></DonutChart>
                 -->
+                <SparklineMan InputData="[30,0,6,20,45,48,51,60,76,77,78,79,90,100,30,90,95,100,40,0,0,0],[50,70,6,20,45,8,51,60,6,77,8,79,0,10,100,10,0,50,30,0,0,0],[100,0,16,25,48,45,1,0,6,37,78,79,90,90,91,100,80,0,40,0,0,0],[60,0,16,25,48,45,1,0,6,37,78,79,90,90,91,99,80,0,40,0,0,0],[80,0,16,25,48,45,1,0,6,37,78,79,90,90,91,95,80,0,40,0,0,0]" StartColor="#ce4b99" StopColor="#377bbc" SegmentWidth="30"></SparklineMan>
+
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
         </div>
