--- a/Blazor-Dashboard/Pages/IndexZ.razor
+++ b/Blazor-Dashboard/Pages/IndexZ.razor
@@ -111,13 +111,17 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header">SparkLine</div>
+            <div class="card-header">SparkLine using Fonts</div>
             <div class="card-body">
-                <h5 class="card-title">Using Fonts</h5>
+                <h5 class="card-title">Sparkline</h5>
                 <!--
-                <DonutChart InputData="8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333,8.33333333"></DonutChart>
+                <WinLossMan InputData="[1,1,1,-1,1,1,1,0,1,-1,1,1,1,1,1,0,1,-1,1,1,1,1,0,0,0,1,1,1,0,1,1,-1,1,1,1,1],[1,1,1,1,1,1,-1,1,1,1,0,1,1,1,-1,1,1,1,1,1,1,0,0,0,1,0,1,1,0,1,1,1,1,1,-1,1]"></WinLossMan>
+                <MiniPieMan InputData="[26,40,95,100],[56,65,87,100]"></MiniPieMan>
+                <BulletBarsMan InputData="[26,40,95,100],[56,65,87,100]" Actual="49" Target="53"></BulletBarsMan>
                 -->
                 <SparklineMan InputData="[30,0,6,20,45,48,51,60,76,77,78,79,90,100,30,90,95,100,40,0,0,50],[50,70,6,20,45,8,51,60,6,77,8,79,0,10,100,10,0,50,30,0,0,80],[100,0,16,25,48,45,1,0,6,37,78,79,90,90,91,100,80,0,40,0,0,40],[60,0,16,25,48,45,1,0,6,37,78,79,90,90,91,99,80,0,40,0,0,56],[80,0,16,25,48,45,1,0,6,37,78,79,90,90,91,95,80,0,40,0,0,90]" StartColor="#ce4b99" StopColor="#377bbc" SegmentWidth="30"></SparklineMan>
+                <h5 class="card-title">Column Bars</h5>
+                <ColumnBarsMan InputData="[21,30,111,114,140,158,206,249,262,266,285,340,428,81,206,249,262,440,158,206,249,262,266,285,340,428],[27,29,95,216,228,242,287,362,369,372,380,433,479,206,249,262,114,540,558,206,249,362,266,285,340,428],[21,30,111,114,140,158,206,249,262,266,285,340,428,81,206,249,262,440,158,206,249,262,266,285,340,428],[27,29,95,216,228,242,287,362,369,372,380,433,479,206,249,262,114,540,558,206,249,362,266,285,340,428]"></ColumnBarsMan>
 
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
