Update for Blazor Chart

--- a/Blazor-Dashboard/Pages/IndexZ.razor
+++ b/Blazor-Dashboard/Pages/IndexZ.razor
@@ -70,7 +70,7 @@
             -->
             <div class="card-body">
                 <h5 class="card-title">RenderTreeBuilder</h5>
-                <DonutChart InputData="50,30,20" InputLabels="App Store,Website,Partners"></DonutChart>
+                <DonutChart InputData="50,30,20" InputLabels="App Store,Website,Partners" PrimaryText="150" SecondaryText="Sales"></DonutChart>
                 <!--
                 <p>
                 Width:rectParam.Width
@@ -93,6 +93,16 @@
                 <HorizontalBarChart 
                     InputData="10,20,30,40,50,60,70,80,90,100"
                     InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone,TV">
+                </HorizontalBarChart>
+
+                <HorizontalBarChart 
+                    InputData="10,20,30,40,50,60,70,80,90"
+                    InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone">
+                </HorizontalBarChart>
+
+                <HorizontalBarChart 
+                    InputData="30,20,30,40,130,60,70,80,90"
+                    InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone">
                 </HorizontalBarChart>
 
                 <a href="#" class="btn btn-primary">Details</a>
