--- a/Blazor-Dashboard/Pages/IndexZ.razor
+++ b/Blazor-Dashboard/Pages/IndexZ.razor
@@ -36,7 +36,7 @@
     <hr />
     <div class="card-deck">
         <div class="card">
-            <div class="card-header">Donut Chart</div>
+            <div class="card-header">Line Chart</div>
             <div class="card-body">
                 <h5 class="card-title">Grid Rendering</h5>
                 <!--
@@ -44,8 +44,20 @@
                 <SparklineMan InputData="[30,0,6,20,45,48,51,60,76,77,78,79,90,100,30,90,95,100,40,0,0,0],[50,70,6,20,45,8,51,60,6,77,8,79,0,10,100,10,0,50,30,0,0,0],[100,0,16,25,48,45,1,0,6,37,78,79,90,90,91,100,80,0,40,0,0,0],[60,0,16,25,48,45,1,0,6,37,78,79,90,90,91,99,80,0,40,0,0,0],[80,0,16,25,48,45,1,0,6,37,78,79,90,90,91,95,80,0,40,0,0,0]" StartColor="#ce4b99" StopColor="#377bbc" SegmentWidth="40"></SparklineMan>
                 <SparklineMan InputData="[30,0,6,20,45,48,51,60,76,77,78,79,90,100,30,90,95,100,40,0,0,0],[50,70,6,20,45,8,51,60,6,77,8,79,0,10,100,10,0,50,30,0,0,0],[100,0,16,25,48,45,1,0,6,37,78,79,90,90,91,100,80,0,40,0,0,0],[60,0,16,25,48,45,1,0,6,37,78,79,90,90,91,99,80,0,40,0,0,0]" StartColor="#ce4b99" StopColor="#377bbc" SegmentWidth="20"></SparklineMan>        
                 <LineChartMan InputData="[30,70,42,50,3,55,35,22 ],[40,50,32,70,55,15,15,12],[0,10,10,10,10,20,70,70]"></LineChartMan>
-                -->
                 <LineChart InputData="[30,70,42,50,3,55,35,22 ],[40,50,32,70,55,15,15,12],[0,10,10,10,10,20,70,70]"
+                           InputLabels="App Store,Website,Partners">
+                </LineChart>
+                <LineChart InputSeries1="30,70,42,50,3,55,35,22"
+                           InputSeries2="40,50,32,70,55,15,15,12"
+                           InputSeries3="0,10,10,10,10,20,70,70"
+                           InputLabels="App Store,Website,Partners">
+                </LineChart>
+                -->
+
+                <LineChart InputSeries1="30,70,42,50,3,55,35,22"
+                           InputSeries2="40,50,32,75,55,15,15,12,66"
+                           InputSeries3="0,10,10,10,10,20,70,70"
+                           XAxisLabels="Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep"
                            InputLabels="App Store,Website,Partners">
                 </LineChart>
 
@@ -57,7 +69,7 @@
             <div class="card-body">
                 <h5 class="card-title">By Channels</h5>                
                 <PieChart InputData="10,30,20,10,10,10,5,5" 
-                            InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates">
+                          InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates">
                 </PieChart>
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
@@ -95,6 +107,7 @@
                     InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone,TV">
                 </HorizontalBarChart>
 
+                <!--
                 <HorizontalBarChart 
                     InputData="10,20,30,40,50,60,70,80,90"
                     InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone">
@@ -104,6 +117,7 @@
                     InputData="30,20,30,40,130,60,70,80,90"
                     InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone">
                 </HorizontalBarChart>
+                -->
 
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
@@ -116,7 +130,12 @@
                 <VerticalBarChart InputData="30,70,42,50,3,55,35,22,10,30"
                     InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone,TV">
                 </VerticalBarChart>
-                
+                <!--
+                <VerticalBarChart InputData="30,70,42,150,3,55,35,22,10,30"
+                    InputLabels="App Store,Website,Partners,Direct,Channels,Retail,Distributors,Affiliates,Phone,TV">
+                </VerticalBarChart>
+                -->
+
                 <a href="#" class="btn btn-primary">Details</a>
             </div>
         </div>
