--- a/Blazor-Dashboard/Shared/MainLayoutZ.razor
+++ b/Blazor-Dashboard/Shared/MainLayoutZ.razor
@@ -79,6 +79,7 @@
         </div>
             -->
         <!--SlideInSideBar-->
+        <!--
         <nav id="nav-menu" class="slidebar-nav ind" style="margin-top:-6px">
             <div class="top-row pl-4 navbar navbar-dark">
                 <a class="navbar-brand" href="">BLAZOR DASHBOARD</a>
@@ -105,7 +106,33 @@
                 </ul>
             </div>
         </nav>
+        -->
+        <nav id="nav-menu" class="slidebar-nav ind" style="margin-top:-6px">
+            <div class="top-row pl-4 navbar navbar-dark">
+                <a class="navbar-brand" href="">BLAZOR DASHBOARD</a>
+            </div>
+            <div id="inner-nav-menu" class="" style="overflow:auto">
+                <ul class="nav flex-column">
+                    <li class="nav-item-side px-3">
+                        <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
+                            <span class="oi oi-home" aria-hidden="true"></span> Home
+                        </NavLink>
+                    </li>
 
+                    <li class="nav-item-side px-3">
+                        <NavLink class="nav-link" href="counter">
+                            <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                        </NavLink>
+                    </li>
+                    <li class="nav-item-side px-3">
+                        <NavLink class="nav-link" href="fetchdata">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                        </NavLink>
+                    </li>
+
+                </ul>
+            </div>
+        </nav>
 
         <div class="main slidebar-cover" @onclick=HideSlideInSideBar>
                 <div class="content px-4">
